# jxr_to_avif

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  CommandLineParser.cxx  CommandLineParser.hpp  JxrChunkLoader.cpp  JxrChunkLoader.hpp  JxrData.hpp  JxrImage.cpp  JxrImage.hpp  LICENSE-THIRD-PARTY  PixelFormat.hpp  README.md  jxr_data.c  jxr_data.h  jxr_sys_helpers.c  jxr_sys_helpers.h  main.cxx
